--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- SLIDER -->
-<div class="swiper-container">
+<div class="swiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <a href="/teknik-servis">
@@ -20,6 +20,7 @@
             </a>
         </div>
     </div>
+
     <div class="swiper-scrollbar"></div>
 </div>
 
@@ -92,17 +93,53 @@
             <h2>Galeri</h2>
         </div>
 
-        <div id="lightGallery" class="gallery-images">
-            <a href="/assets/img/images/dji-destek-drone-teknik-servis-ofis.jpg" class="image col-md-4 col-xs-12">
+        <div class="lightGallery gallery-images">
+            <a href="/assets/img/images/dji-destek-drone-teknik-servis-ofis.jpg" class="image col-md-3 col-xs-6">
                 <img src="/assets/img/images/dji-destek-drone-teknik-servis-ofis.jpg" alt="dji-destek-drone-teknik-servis-ofis.jpg">
             </a>
         
-            <a href="/assets/img/images/dji-mavic-drone-tamir.jpg" class="image col-md-4 col-xs-12">
+            <a href="/assets/img/images/dji-mavic-drone-tamir.jpg" class="image col-md-3 col-xs-6">
                 <img src="/assets/img/images/dji-mavic-drone-tamir.jpg" alt="dji-mavic-drone-tamir.jpg">
             </a>
 
-            <a href="/assets/img/images/dji-phantom-drone-tamir.jpg" class="image col-md-4 col-xs-12">
+            <a href="/assets/img/images/dji-mavic-drone-tamir-2.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-mavic-drone-tamir-2.jpg" alt="dji-mavic-drone-tamir-2.jpg">
+            </a>
+            
+            <a href="/assets/img/images/dji-phantom.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-phantom.jpg" alt="dji-phantom.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-phantom-drone-tamir.jpg" class="image col-md-3 col-xs-6">
                 <img src="/assets/img/images/dji-phantom-drone-tamir.jpg" alt="dji-phantom-drone-tamir.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-drone-tamir-yedek-parca.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-drone-tamir-yedek-parca.jpg" alt="dji-drone-tamir-yedek-parca.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-yedek-parcalari.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-yedek-parcalari.jpg" alt="dji-yedek-parcalari.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-mavic-kamera-tamir.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-mavic-kamera-tamir.jpg" alt="dji-mavic-kamera-tamir.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-phantom-kamera-tamir.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-phantom-kamera-tamir.jpg" alt="dji-phantom-kamera-tamir.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-mavic-tamir.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-mavic-tamir.jpg" alt="dji-mavic-tamir.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-mavic-tamir-2.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-mavic-tamir-2.jpg" alt="dji-mavic-tamir-2.jpg">
+            </a>
+
+            <a href="/assets/img/images/dji-mavic-yakin-cekim-ayrinti.jpg" class="image col-md-3 col-xs-6">
+                <img src="/assets/img/images/dji-mavic-yakin-cekim-ayrinti.jpg" alt="dji-mavic-yakin-cekim-ayrinti.jpg">
             </a>
         </div>
 
