--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <script>
         if (window.location.host !== 'localhost:5001') {
             if (location.protocol !== 'https:') {
@@ -40,7 +38,7 @@
     })(window,document,'script','dataLayer','GTM-PLF5JRL');</script>
     <!-- End Google Tag Manager -->
     
-    <!-- TITLE -->
+    <!-- WEBSITE TITLE -->
     <title><%- title %></title>
     
     <!-- WEBSITE DESCRIPTION -->
@@ -79,12 +77,9 @@
     <!-- LIGHTGALLERY -->
     <link rel="stylesheet" href="/assets/lightgallery/css/lightgallery.css" />
     <link rel="stylesheet" href="/assets/lightgallery/css/lg-zoom.css" />
-    <link rel="stylesheet" href="/assets/lightgallery/css/lg-thumbnail.css" />
-    <link rel="stylesheet" href="/assets/lightgallery/css/lg-fullscreen.css" />
-    <link rel="stylesheet" href="/assets/lightgallery/css/lg-transitions.css" />
     
     <!-- WEBSITE STYLE -->
-    <link rel="stylesheet" href="/assets/css/style.css?v=3.1">
+    <link rel="stylesheet" href="/assets/css/style.css?v=3.2">
 
 </head>
 
@@ -433,8 +428,8 @@
     <script src="/assets/lightgallery/plugins/relativeCaption/lg-relative-caption.min.js"></script>
 
     <!-- SCRIPTS -->
-    <script src="/assets/js/scripts.js?v=2.0.1"></script>
-    <script src="/assets/js/scripts-ajax.js?v=1.0.0"></script>
+    <script src="/assets/js/scripts.js?v=2.0.2"></script>
+    <script src="/assets/js/scripts-ajax.js?v=1.0.1"></script>
     
 </body>
 
