--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1251,7 +1251,7 @@ section .section-title{
 
 .gallery .gallery-images .image img{
     width: 100%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
     border-radius: 7.5px;
 }
